css/style.css
/* :root {
	--primary-color: #fff;
	--dark-color: #141414;
} */

:root {
	/* --primary-color: #e50914; */
	--primary-color: #a708f1;
	--dark-color: #141414;

	/* background-color: #a708f1;  */
	/* For browsers that do not support gradients */
	/* background-image: linear-gradient(
		to right,
		#000000,
		#5c21a5,
		#8c269c,
		#000000
	);  */
	/* Standard syntax (must be last) */
}

* {
	background-origin: border-box;
	margin: 0;
	padding: 0;
}

body {
	/* font-family: 'Ariel', sans-serif; */
	font-family: 'Roboto', sans-serif;
	-webkit-font-smoothing: antialiased;
	/* background: #000; */
	color: #999;
	/* font-weight: 300; */
}

a {
	color: rgb(182, 182, 182);
	text-decoration: none;
}

a:hover {
	color: #fff;
}

p {
	margin: 0.5rem 0;
}

li {
	/* display: inline; */
	list-style-type: none;
}

/* img {
	width: 100%;
} */

hr {
	height: 1px;
	background-color: #ccc;
	border: none;
	margin: 0;
}

.container2 {
	padding-right: 2rem;
	padding-left: 2rem;
}

/* .scroll-style {
	max-height: 150px;
	overflow-x: scroll;
} */

/* img {
	width: 100%;
} */
/* 
#top-summary {
	width: 100%;
	height: 100vh;
	background: url('../img/15bzC.jpg') no-repeat center center/cover;
}

#top-summary::after {
	content: '';
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: 1;
	background: rgba(0, 0, 0, 0.6);
	box-shadow: inset 570px 100px 250px #000000, inset 0px -20px 250px #000000;
} */

.showcase, .sign-in-page, .iflix-movie-fight  {
	/* width: 100%; */
	width: 100vw;
	height: 100vh;
	position: relative;
	/* background: url('../img/goldabstractbackground.jpg') no-repeat center center/cover; */
	/* background: url('../img/15bzC.jpg') no-repeat center center/cover; */
	background: url('../img/iflix-bg.jpg') no-repeat center center/cover;
}

.sign-in-page {
	background: url('../img/iflix-bg4.jpg') no-repeat center center/cover;
	height: 140vh;
}

.iflix-movie-fight  {
	background: url('../img/iflix-bg2.jpg') no-repeat center center/cover;
}


.showcase::after, .iflix-movie-fight::after,
.celebrity-moves-content::after {
	content: '';
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: 1;
	background: rgba(0, 0, 0, 0.2);
	box-shadow: inset 120px 100px 250px #000000, inset -120px -100px 250px #000000;

	/* background: rgba(54, 56, 57, 0.6); */
	/* box-shadow: inset 600px 100px 250px #000000; */
	/* box-shadow: inset 570px 100px 250px #282828, inset 0px -20px 250px #282828; */
	/* box-shadow: inset 570px 100px 250px #393b3d, inset 0px -20px 250px #393b3d; */
}

/* .showcase img {
	width: 170px;
	position: absolute;
	top: 50%;
	left: 12%;
	transform: translate(-50%, -50%);
} */

.showcase-top {
	position: relative;
	z-index: 2;
	height: 90px;
}

.showcase img, .showcase a.iflix-sign-in ,  .showcase a.iflix-fight, .showcase-flix-fight img{
	/* width: 300px; */
	width: 18.75rem;
	/* height: 160px; */
	position: absolute;
	top: 110%;
	left: 12%;
	transform: translate(-50%, -50%);
}

.showcase a.iflix-sign-in img, .showcase a.iflix-fight img{
	z-index: 10;
	left: 50%;
}

.showcase a.iflix-fight img{
	z-index: 10;
	left: 500%;
}


.showcase-top a {
	position: absolute;
	top: 50%;
	right: 0;
	transform: translate(-50%, -50%);
}

.showcase-flix-fight a.search {
	right: 9%;
}

.showcase-content {
	position: relative;
	z-index: 2;
	/* margin: auto; */
		/* margin-top: 8rem; */
	/* margin: 5rem 0; */
	display: flex;
	flex-direction: column;
	justify-content: center;
	/* align-items: left; */
	align-items: center;
	text-align: center;

}

.showcase-content h1,
.flix-fight-content h1 {
	font-weight: 600;
	/* font-family: 'Caveat', cursive; */
	/* font-family: 'Ariel', sans-serif; */
	font-family: Arial, Helvetica, sans-serif;
	font-size: 3.4rem;
	line-height: 1.1;
	letter-spacing: -1.3px;
	margin: 0 0 1rem;
	width: 66vw;
	color: #fff;
	/* color: #9400d3; */
}


.flix-fight-content h1 {
	/* margin-top: 7rem; */
	margin-top: 4rem;
	position: relative;
	z-index: 2;
}

.showcase-content p{
	font-family: sans-serif;
	/* font-weight: 400 !important; */
	font-size: 3rem;
}


.showcase-content p,
.flix-fight-content p {
	/* text-transform: uppercase; */
	color: #fff;
	font-weight: 400;
	font-size: 1.7rem;
	letter-spacing: 0.05rem;
	line-height: 1.25;
	margin: 0 0 2rem;
}
.showcase-content p:nth-child(2){
	margin: 0 0  1.5rem 0;
}
.flix-fight-content p {
	position: relative;
	z-index: 2;
}

.flix-fight-search-title {
	position: relative;
	z-index: 2;
	color: white !important;
	text-align: center;
	font-family: cursive, Monotype Corsiva;
	font-size: 5rem !important;
}

.fight-search {
	position: relative;
	z-index: 2;
	margin: auto;
	width: 80%;
	/* padding: 100px; */
	background-color: rgba(0, 0, 0, .8);
	/* background-color: #a708f1; 
	background-image: linear-gradient(
		to right,
		#000000,
		#5c21a5,
		#000000,
		#8c269c,
		#000000
	);  */
	/* background: url('../img/fightingTV.png') no-repeat center center/cover; */
	/* background: url('../img/fightingTV.png'); */
	box-shadow: 5px 10px 8px #131313;
}

/* .fight-search .column{
	background: url('../img/fightingTV.png') no-repeat center center/cover;

} */

.fight-search .column p.movie-search-title {
	margin-top: 40px;
	margin-bottom: 40px;
 font-size: 1.5rem;
 text-align: center;
 color: #ffffff;
}

.fight-search .column p span{
	/* background-color: rgb(140, 38, 156); */
	padding: 0.8rem 1.4rem;
	border-radius: 50%;
	font-weight: 600;
	font-size: 2rem;
}

/* .fight-search .column div{
	margin-top: 50px;
} */

.showcase-content p#small-txt {
	font-size: 1.2rem;
	margin: 0 0  1.3rem 0;
}

.showcase-content a {
	font-size: 1.9rem;
	font-weight: 400;
}

/* .showcase-content .fa-film {
	font-size: 6rem;
	color: #daa520;
} */


/* .dropdown-item {
	display: flex;
	align-items: center;
	height: 60px;
}

.dropdown-item img {
	height: 50px;
	margin-right: 10px;
} */
/* ... */

